RESOLVED FIXED14245
Underline painted under <br>, not repainted properly
https://bugs.webkit.org/show_bug.cgi?id=14245
Summary Underline painted under <br>, not repainted properly
mitz
Reported 2007-06-20 13:45:50 PDT
In the URL, there are two-pixel long black lines right above the "Standalone Installer" and "USB" headings. They are apparently underlines painted under <br>s. Highlighting nearby text deletes one of the pixels, and forcing a repaint restores it.
Attachments
Do not paint zero-width underlines, paint short underlines properly (27.97 KB, patch)
2007-06-20 14:47 PDT, mitz
darin: review+
mitz
Comment 1 2007-06-20 13:54:23 PDT
The underline painting under <br> seems to be a feature of strict mode. This is a reduction: <!DOCTYPE HTML><u><br>foo</u>
mitz
Comment 2 2007-06-20 14:47:57 PDT
Created attachment 15147 [details] Do not paint zero-width underlines, paint short underlines properly
Darin Adler
Comment 3 2007-06-21 23:42:10 PDT
Comment on attachment 15147 [details] Do not paint zero-width underlines, paint short underlines properly r=me
Mark Rowe (bdash)
Comment 4 2007-06-25 03:29:43 PDT
Landed in r23761.
Note You need to log in before you can comment on or make changes to this bug.