2007-06-25  Mitz Pettel  <mitz@webkit.org>

Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=14245
          Underline painted under <br>, not repainted properly

        Test: fast/inline/br-text-decoration.html

        * platform/graphics/cg/GraphicsContextCG.cpp:
        (WebCore::GraphicsContext::drawLineForText): Added an early return if the line width
        is zero. Also changed the line stroke to a rect fill, so that lines with length shorter
        than their thickness paint correctly.

2007-06-25  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=14245
          Underline painted under <br>, not repainted properly

        * fast/inline/br-text-decoration-expected.checksum: Added.
        * fast/inline/br-text-decoration-expected.png: Added.
        * fast/inline/br-text-decoration-expected.txt: Added.
        * fast/inline/br-text-decoration.html: Added.


Canonical link: https://commits.webkit.org/18546@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@23761 268f45cc-cd09-0410-ab3c-d52691b4dbfc